[tool.poetry]
name = "kinetic-sdk"
version = "1.0.0-rc.7"
description = ""
authors = ["Kin Foundation <dev@kin.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kin-labs/kinetic-python-sdk"
documentation = "https://github.com/kin-labs/kinetic-python-sdk"
keywords = ["solana", "blockchain", "kin", "web3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
solana = "^0.27.2"
pybase64 = "^1.2.2"
solders = "0.9.3"
kinetic-sdk-generated = "^1.0.0-rc.1" 
# kinetic-sdk-generated = {path = "src/kinetic_sdk/generated/kinetic-sdk-generated"}
pybip39 = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
