[tool.poetry]
name = "kinetic-sdk"
version = "1.0.0-rc.16"
description = ""
authors = ["Kin Foundation <dev@kin.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kin-labs/kinetic-python-sdk"
documentation = "https://github.com/kin-labs/kinetic-python-sdk"
keywords = ["solana", "blockchain", "kin", "web3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8.1"
solana = "^0.27.2"
pybase64 = "^1.2.2"
solders = "0.9.3"
pybip39 = "^0.1.0"
python-dateutil = "^2.8.2"
bip-utils = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
isort = "^5.11.4"
black = "^22.12.0"
pydocstyle = "^6.1.1"
flake8 = "^6.0.0"
mypy = "^0.991"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
